--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,18 +5,7 @@
 </head>
 <body>
   <h1> FIRST paragraph</p>
+<h1>This is a Heading</h1>
+<p>My first paragraph.</p>
 </body>
 </html>
-=======
-<!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
-
-<p>this is a another para</p>
-
-</body>
-</html>
->>>>>>> 7b6ac32 (add some html)
